# csa_31_multiple-models

./: .gitignore  01_initial_model.py  CLAUDE.md  EXAMPLE_OUTPUT.md  EXPERIMENT_FRAMEWORK_README.md  experiment.py  hyperband_model.py  main.py  model_training.py  model_training_hyperband.py  pyproject.toml
.claude/: settings.local.json
model_defs/: simple_cnn.py  simple_cnn_params.py  simple_mlp.py  simple_mlp_params.py
